--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
 			
          <div id = "tabs-4">
             <p></p>
-             <div id="questionData3"></div>
+             <h5>Three questions from Poll 3</h5>
+             <p></p>
+             <div id="questionData30"></div>
+             <div id="questionData31"></div>
+             <div id="questionData32"></div>
              
              <p></p>
              <div id="methodData3"></div>
