--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
             <p></p>
              <h5>Three questions from Poll 3</h5>
              <p></p>
-             <div id="questionData30"></div>
-             <div id="questionData31"></div>
-             <div id="questionData32"></div>
+             <div id="methodData3"></div>
+             <div id="partisanPollData3"></div>
+             <div id="pollsterData3"></div>
              <p></p>
              <div id="questionData30"></div>
              <canvas id="chartData30"></canvas>
