--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
       <link href = "http://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel = "stylesheet">
       <script src = "http://code.jquery.com/jquery-1.10.2.js"></script>
       <script src = "http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+      <link href = "css/custom-theme/jquery-ui-1.10.4.custom.css" rel = "stylesheet">
       <link type="text/css" rel="stylesheet" href="style.css">
    </head>
 	
    <body>
-       <div>
-           <h2 id="title">2016 Election Data</h2>
+       <div id="title">
+           <h1 id="titleText">2016 Election Data</h1>
        </div>
       <div id = "tabs-1">
          <ul>
