--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 	
    <body>
        <div id="title">
-           <h1 id="titleText">2016 Election Data</h1>
+           <div id="box">
+            <h1 id="titleText">2016 Election Data</h1>
+           </div>
        </div>
       <div id = "tabs-1">
          <ul>
