--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <h1 id="titleText">2016 Election Data</h1>
            </div>
        </div>
+       <div id="content">
       <div id = "tabs-1">
          <ul>
             <li><a href = "#tabs-2">Poll 1</a></li>
@@ -77,6 +78,7 @@
          </div>
 			
       </div>
+       </div>
 		<script type="text/javascript" src="script.js"></script>
    </body>
 </html>
